[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.36"
ash_ez = { path = "ash_ez" }
ash-window = "0.9"
crossbeam-channel = "0.5.1"
egui = "0.15"
euclid = "0.22.6"
fastrand = "1.5"
imgui = "0.8"
imgui-rs-vulkan-renderer = "~1.2"
imgui-winit-support = "0.8"
winit = "0.25"